--- a/db/sample/taxons.yml
+++ b/db/sample/taxons.yml
@@ -9,16 +9,16 @@ mc_l1_n1:
   taxonomy: master_categories
   parent_id: 1000
   position: 1
-  products: ror_tote, ror_bag
   permalink: categories/bags/
+  product_group: category_bags
 mc_l1_n2:
   id: 1003
   name: Mugs
   taxonomy: master_categories
   parent_id: 1000
   position: 2
-  products: ror_mug, ror_stein
   permalink: categories/mugs/
+  product_group: category_mugs
 clothing:
   id: 1001
   name: Clothing
@@ -33,16 +33,15 @@ shirts:
   taxonomy: master_categories
   parent_id: 1001
   position: 0
-  products: ror_jr_spaghetti
   permalink: categories/clothing/shirts/
 t_shirts:
   id: 3000
   name: T-Shirts
   taxonomy: master_categories
   parent_id: 2000
-  products: ror_baseball_jersey, ror_ringer, apache_baseball_jersey, ruby_baseball_jersey
   position: 0
   permalink: categories/clothing/shirts/t-shirts/
+  product_group: category_t-shirts
 brand_root:
   id: 20000
   name: Brands
@@ -53,19 +52,19 @@ ruby:
   taxonomy: brand
   parent_id: 20000
   position: 0
-  products: ruby_baseball_jersey
   permalink: brands/ruby/
+  product_group: brand_ruby
 rails:
   name: Ruby on Rails
   taxonomy: brand
   parent_id: 20000
   position: 1
-  products: ror_baseball_jersey, ror_jr_spaghetti, ror_ringer, ror_stein, ror_bag, ror_tote, ror_mug
   permalink: brands/ruby-on-rails/
+  product_group: brand_ruby-on-rails
 apache:
   name: Apache
   taxonomy: brand
   parent_id: 20000
   position: 2
-  products: apache_baseball_jersey
   permalink: brands/apache/
+  product_group: brand_apache
